# anylabeling

./: app.py  pyproject.toml
anylabeling/: config.py
anylabeling/services/auto_labeling/: model.py  model_manager.py  segment_anything.py  yolov5.py  yolov8.py
anylabeling/views/common/: toaster.py
anylabeling/views/labeling/: label_widget.py  shape.py
anylabeling/views/labeling/utils/: image.py
anylabeling/views/labeling/widgets/: canvas.py  color_dialog.py  file_dialog_preview.py  label_dialog.py  label_list_widget.py  toolbar.py  unique_label_qlist_widget.py
anylabeling/views/labeling/widgets/auto_labeling/: auto_labeling.py
